--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <section class="nav-ea">
+        <img src="/Archivos/IMG/icono usuario.png" alt="">
+        <h1>texto</h1>
+    </section>
     <h1 class="puto">PUTO GITHUB3</h1>
     <p>odio a los que no usan GitHub</p>
 </body>
