--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <section class="nav-ea">
         <img src="/Archivos/IMG/icono usuario.png" alt="">
-        <h1>texto</h1>
+        <img src="/Archivos/IMG/icono interrogacion.png" alt="">
+        <img src="/Archivos/IMG/artes-de-la-electronica.png" alt="">
     </section>
     <h1 class="puto">PUTO GITHUB3</h1>
     <p>odio a los que no usan GitHub</p>
