feat: update "index.html"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
         <img src="/Archivos/IMG/icono interrogacion.png" alt="">
         <img src="/Archivos/IMG/artes-de-la-electronica.png" alt="">
     </section>
-    <h1 class="puto">PUTO GITHUB3</h1>
-    <p>odio a los que no usan GitHub</p>
+    
+    <section class="about">
+        <div class="text">
+            <h1>PRE-ORDER EA SPORTS FC™ 26 ULTIMATE EDITION</h1>
+
+            <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
+
+            <button>Pre-Order-Now</button>
+        </div>
+    </section>
 </body>
 </html>
