--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
 
-            <button>Pre-Order-Now</button>
+            <button>Pre-Order-Nows</button>
         </div>
     </section>
 </body>
