--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <section class="nav-ea">
-        <img src="./Archivos/IMG/icono usuario.png" alt="">
-        <img src="./Archivos/IMG/icono interrogacion.png" alt="">
-        <img src="./Archivos/IMG/artes-de-la-electronica.png" alt="">
+        <img src="./Archivos/IMG/icono usuario.png" alt="" class="user">
+        <img src="./Archivos/IMG/icono interrogacion.png" alt="" class="help">
+        <img src="./Archivos/IMG/artes-de-la-electronica.png" alt="" class="ea-logo">
     </section>
     
     <section class="about">
