--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@
             <button>Pre-Order-Nows</button>
         </div>
     </section>
+
+    <section class="info_1">
+        <div class="text-info">
+            <h2>Try NHL 26 for 10 hours with EA Play.</h2>
+        </div>
+
+        <div class="img-info">
+            <a href="#"><img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt=""></a>
+            <button>Join Now</button>
+        </div>
+    </section>
 </body>
 </html>
