--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
         <img src="./Archivos/IMG/icono interrogacion.png" alt="" class="help">
         <img src="./Archivos/IMG/artes-de-la-electronica.png" alt="" class="ea-logo">
     </section>
-    
+    <section class="nav-barra">
+        <a href="">
+            <img src="./Archivos/IMG/tres-puntos.png" alt="icono" class="icono-tres-puntos">
+        </a>
+        <a href="https://www.ea.com/es-es">
+            <img src="./Archivos/IMG/logo-2-ea.png" alt="logo-2" class="ea-logo-2">
+        </a>
+        <a href="" class="juegos">JUEGOS</a>
+        <a href="" class="experiencias">EXPERIENCIAS</a>
+        <a href="" class="acerca_de">ACERCA DE</a>
+        <a href="" class="compromisos">COMPROMISOS</a>
+        <a href="" class="recursos">RECURSOS</a>
+
+    </section>
     <section class="about">
         <div class="text">
             <h1>PRE-ORDER EA SPORTS FC™ 26 ULTIMATE EDITION</h1>
@@ -34,4 +47,12 @@
         </div>
     </section>
 </body>
+<footer>
+    <section class="equipo-ea">
+
+    </section>
+    <section class="terminos-y-condiciones">
+        <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
+    </section>
+</footer>
 </html>
