--- a/index.html
+++ b/index.html
@@ -35,7 +35,29 @@
             <button>Pre-Order-Nows</button>
         </div>
     </section>
-
+    <section class="juegos-destacados">
+        <h3>Juegos Destacados</h3>
+            <div class="juegos-productos">
+                <a href="">
+                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/08/bf6-box-art-1x1.jpg.adapt.crop1x1.767p.jpg" alt="battlefield">
+                </a>
+                <a href="">
+                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/07/fc-26-key-art.jpg.adapt.crop1x1.767p.jpg" alt="FC_26">
+                </a>
+                <a href="">
+                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/03/f1-25-iconic-gamebox-1x1.jpg.adapt.crop1x1.767p.jpg" alt="F1_25">
+                </a>
+                <a href="">
+                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2024/12/splitkeyart1x1.jpg.adapt.crop1x1.767p.jpg" alt="Split_Fiction">
+                </a>
+                <a href="">
+                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2017/01/the-sims-4-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Los_Sims_4">
+                </a>
+                <a href="">
+                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2019/01/apex-legends-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Apex_legends">
+                </a>
+            </div>
+    </section>
     <section class="info_1">
         <div class="text-info">
             <h2>Try NHL 26 for 10 hours with EA Play.</h2>
