--- a/index.html
+++ b/index.html
@@ -38,24 +38,36 @@
     <section class="juegos-destacados">
         <h3>Juegos Destacados</h3>
             <div class="juegos-productos">
-                <a href="">
-                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/08/bf6-box-art-1x1.jpg.adapt.crop1x1.767p.jpg" alt="battlefield">
-                </a>
-                <a href="">
-                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/07/fc-26-key-art.jpg.adapt.crop1x1.767p.jpg" alt="FC_26">
-                </a>
-                <a href="">
-                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/03/f1-25-iconic-gamebox-1x1.jpg.adapt.crop1x1.767p.jpg" alt="F1_25">
-                </a>
-                <a href="">
-                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2024/12/splitkeyart1x1.jpg.adapt.crop1x1.767p.jpg" alt="Split_Fiction">
-                </a>
-                <a href="">
-                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2017/01/the-sims-4-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Los_Sims_4">
-                </a>
-                <a href="">
-                    <img src="https://media.contentapi.ea.com/content/dam/gin/images/2019/01/apex-legends-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Apex_legends">
-                </a>
+                <div class="juegoX">
+                    <a href="">
+                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/08/bf6-box-art-1x1.jpg.adapt.crop1x1.767p.jpg" alt="battlefield">
+                    </a>
+                </div>
+                <div class="juegoX">
+                    <a href="">
+                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/07/fc-26-key-art.jpg.adapt.crop1x1.767p.jpg" alt="FC_26">
+                    </a>
+                </div>
+                <div class="juegoX">
+                    <a href="">
+                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/03/f1-25-iconic-gamebox-1x1.jpg.adapt.crop1x1.767p.jpg" alt="F1_25">
+                    </a>
+                </div>
+                <div class="juegoX">
+                    <a href="">
+                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2024/12/splitkeyart1x1.jpg.adapt.crop1x1.767p.jpg" alt="Split_Fiction">
+                    </a>
+                </div>
+                <div class="juegoX">
+                    <a href="">
+                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2017/01/the-sims-4-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Los_Sims_4">
+                    </a>
+                </div>
+                <div class="juegoX">
+                    <a href="">
+                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2019/01/apex-legends-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Apex_legends">
+                    </a>
+                </div>
             </div>
     </section>
     <section class="info_1">
@@ -71,7 +83,34 @@
 </body>
 <footer>
     <section class="equipo-ea">
-
+        <div class="links">
+            <a href="">Equipo</a>
+            <a href="">Equipo ejecutivo</a>
+            <a href="">Informe de impacto</a>
+            <a href="">Nuestros compromisos</a>
+            <a href="">Colabora con EA</a>
+        </div>
+        <div class="contacto">
+            <h3>Únete a la conversación</h3>
+            <a href="https://www.facebook.com/EA/">
+                <img src="./Archivos/IMG/facebook.png" alt="Facebook">
+            </a>
+            <a href="https://www.twitter.com/ea">
+                <img src="./Archivos/IMG/Twitter.png" alt="X">
+            </a>
+            <a href="https://www.youtube.com/EA">
+                <img src="./Archivos/IMG/youtube.png" alt="Youtube">
+            </a>
+            <a href="https://www.instagram.com/ea">
+                <img src="./Archivos/IMG/instagram.png" alt="Instagram">
+            </a>
+            <a href="https://www.twitch.tv/ea">
+                <img src="./Archivos/IMG/twitch.png" alt="Twitch">
+            </a>
+            <a href="https://www.linkedin.com/company/electronic-arts/">
+                <img src="./Archivos/IMG/linkedin.png" alt="Linkedin">
+            </a>
+        </div>
     </section>
     <section class="terminos-y-condiciones">
         <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
