--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </section>
     <section class="juegos-destacados">
-        <h3>Juegos Destacados</h3>
+        <h3>Featured Games</h3>
             <div class="juegos-productos">
                 <div class="juegoX">
                     <a href="">
@@ -84,14 +84,14 @@
 <footer>
     <section class="equipo-ea">
         <div class="links">
-            <a href="">Equipo</a>
-            <a href="">Equipo ejecutivo</a>
-            <a href="">Informe de impacto</a>
-            <a href="">Nuestros compromisos</a>
-            <a href="">Colabora con EA</a>
+            <a href="">Careers</a>
+            <a href="">Executives</a>
+            <a href="">Impact Report</a>
+            <a href="">Our Commitments</a>
+            <a href="">Partner With Us</a>
         </div>
         <div class="contacto">
-            <h3>Únete a la conversación</h3>
+            <h3>Join The Conversation</h3>
             <a href="https://www.facebook.com/EA/">
                 <img src="./Archivos/IMG/facebook.png" alt="Facebook">
             </a>
