--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de inicio Electronic Arts: sitio oficial de EA</title>
+    <title>Electronic Arts Home Page - Office EA Site</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -19,11 +19,11 @@
         <a href="https://www.ea.com/es-es">
             <img src="./Archivos/IMG/logo-2-ea.png" alt="logo-2" class="ea-logo-2">
         </a>
-        <a href="" class="juegos">JUEGOS</a>
-        <a href="" class="experiencias">EXPERIENCIAS</a>
-        <a href="" class="acerca_de">ACERCA DE</a>
-        <a href="" class="compromisos">COMPROMISOS</a>
-        <a href="" class="recursos">RECURSOS</a>
+        <a href="" class="juegos">GAMES</a>
+        <a href="" class="experiencias">EXPERIENCES</a>
+        <a href="" class="acerca_de">ABOUT</a>
+        <a href="" class="compromisos">COMMITMENTS</a>
+        <a href="" class="recursos">RESOURCES</a>
 
     </section>
     <section class="about">
