--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@
     </section>
     <section class="terminos-y-condiciones">
         <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
+        <a href="">Game Library</a>
+        <a href="">Subscribe</a>
+        <a href="">Redeem Code</a>
+        <a href="">EA app</a>
+        <a href="">About</a>
+        <a href="">Accessibility</a>
+        <a href="">Help</a>
+        <a href="">Forums</a>
+        <div class="terminos-legales">
+            <a href="">Legal & Privacy</a>
+            <a href="">User Agreement</a>
+            <a href="">Privacy & Cookie Policy</a>
+            <a href="">Online Service Updates</a>
+            <a href="">Security</a>
+        </div>
     </section>
+    &copy;2025 Electronic Arts Inc.
 </footer>
 </html>
