--- a/index.html
+++ b/index.html
@@ -113,23 +113,50 @@
         </div>
     </section>
     <section class="terminos-y-condiciones">
-        <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
-        <a href="">Game Library</a>
-        <a href="">Subscribe</a>
-        <a href="">Redeem Code</a>
-        <a href="">EA app</a>
-        <a href="">About</a>
-        <a href="">Accessibility</a>
-        <a href="">Help</a>
-        <a href="">Forums</a>
-        <div class="terminos-legales">
-            <a href="">Legal & Privacy</a>
-            <a href="">User Agreement</a>
-            <a href="">Privacy & Cookie Policy</a>
-            <a href="">Online Service Updates</a>
-            <a href="">Security</a>
+        <div class="logo-footer">
+            <a href="https://www.ea.com/">
+                <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
+            </a>  
+        </div>
+        <div class="cajon">
+            <div class="links">
+                <div class="links-1">
+                    <a href="">Game Library</a>
+                    <a href="">Subscribe</a>
+                    <a href="">Redeem Code</a>
+                    <a href="">EA app</a>
+                    <a href="">About</a>
+                    <a href="">Accessibility</a>
+                    <a href="">Help</a>
+                    <a href="">Forums</a>
+                </div>
+                <div class="idiomas">
+                    <button>
+                        <div class="lenguaje">Language</div>
+                        <div class="pais">United States</div>
+                    </button>
+                </div>
+            </div>
+            <div class="cajon-2">
+                <div class="cajon-3">
+                    <div class="terminos-legales">
+                        <a href="">Legal & Privacy</a>
+                        <a href="">User Agreement</a>
+                        <a href="">Privacy & Cookie Policy</a>
+                        <a href="">Online Service Updates</a>
+                        <a href="">Security</a>
+                    </div>
+                    <div class="derechos">
+                            &copy;2025 Electronic Arts Inc.
+                    </div>
+                </div>
+                <div class="verificacion">
+                    <a href="https://privacy.truste.com/privacy-seal/validation?rid=f1a11c5d-0232-4077-8498-2e69a38c1335">
+                        <img src="https://privacy-policy.truste.com/privacy-seal/seal?rid=f1a11c5d-0232-4077-8498-2e69a38c1335" alt="Verificacion">
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
-    &copy;2025 Electronic Arts Inc.
 </footer>
 </html>
