--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
                 </div>
             </div>
     </section>
+    <section class="banner-celeste">
+        <div class="text-banner-celeste">
+            <h1>Players and Parents: Video Game control is in your <br>hands</h1>
+        </div>
+        <button>Learn More</button>
+    </section>
+    <section class="impact-report">
+        <img src="https://media.contentapi.ea.com/content/dam/eacom/commitments/common/commitments-impact-report-2024-50-50-section-16x9.jpg.adapt.1456w.jpg">
+        <div class="info-impact-report">
+            <p>How our incredibly talented, values-driven teams are continuously working to help foster lasting impact to lead the future of entertainment.</p>
+            <button>Learn More</button>
+            <button>Read The Report</button>
+        </div>
+    </section>
 </body>
 <footer>
     <section class="equipo-ea">
