--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
             <button>Pre-Order-Nows</button>
         </div>
     </section>
+    <section class="info_1">
+        <div class="text-info">
+            <h2>Try NHL 26 for 10 hours with EA Play.</h2>
+        </div>
+
+        <div class="img-info">
+            <a href="#"><img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt=""></a>
+            <button>Join Now</button>
+        </div>
+    </section>
     <section class="juegos-destacados">
         <h3>Juegos Destacados</h3>
             <div class="juegos-productos">
@@ -70,14 +80,18 @@
                 </div>
             </div>
     </section>
-    <section class="info_1">
-        <div class="text-info">
-            <h2>Try NHL 26 for 10 hours with EA Play.</h2>
+    <section class="banner-celeste">
+        <div class="text-banner-celeste">
+            <h1>Players and Parents: Video Game control is in your <br>hands</h1>
         </div>
-
-        <div class="img-info">
-            <a href="#"><img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt=""></a>
-            <button>Join Now</button>
+        <button>Learn More</button>
+    </section>
+    <section class="impact-report">
+        <img src="https://media.contentapi.ea.com/content/dam/eacom/commitments/common/commitments-impact-report-2024-50-50-section-16x9.jpg.adapt.1456w.jpg">
+        <div class="info-impact-report">
+            <p>How our incredibly talented, values-driven teams are continuously working to help foster lasting impact to lead the future of entertainment.</p>
+            <button>Learn More</button>
+            <button>Read The Report</button>
         </div>
     </section>
 </body>
@@ -115,5 +129,6 @@
     <section class="terminos-y-condiciones">
         <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
     </section>
+
 </footer>
 </html>
