--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </body>
 <footer>
     <section class="equipo-ea">
-        <div class="links">
+        <div class="link">
             <a href="">Careers</a>
             <a href="">Executives</a>
             <a href="">Impact Report</a>
