--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de inicio Electronic Arts: sitio oficial de EA</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <section class="nav-ea">
         <img src="./Archivos/IMG/icono usuario.png" alt="" class="user">
@@ -30,45 +32,11 @@
         <div class="text">
             <h1>PRE-ORDER EA SPORTS FC™ 26 ULTIMATE EDITION</h1>
 
-            <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
+            <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate
+                Edition today</p>
 
             <button>Pre-Order-Nows</button>
         </div>
-    </section>
-    <section class="juegos-destacados">
-        <h3>Juegos Destacados</h3>
-            <div class="juegos-productos">
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/08/bf6-box-art-1x1.jpg.adapt.crop1x1.767p.jpg" alt="battlefield">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/07/fc-26-key-art.jpg.adapt.crop1x1.767p.jpg" alt="FC_26">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/03/f1-25-iconic-gamebox-1x1.jpg.adapt.crop1x1.767p.jpg" alt="F1_25">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2024/12/splitkeyart1x1.jpg.adapt.crop1x1.767p.jpg" alt="Split_Fiction">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2017/01/the-sims-4-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Los_Sims_4">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2019/01/apex-legends-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Apex_legends">
-                    </a>
-                </div>
-            </div>
     </section>
     <section class="info_1">
         <div class="text-info">
@@ -79,6 +47,44 @@
             <a href="#"><img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt=""></a>
             <button>Join Now</button>
         </div>
+    </section>
+    <h3 class="text2">Featured Games</h3>
+    <section class="juegos-destacados">
+        <a href="#" class="juegoX1">
+            <div>
+                <img src="./Archivos/IMG/battlefield.png" alt="">
+            </div>
+        </a>
+        <a href="" class="juegoX2">
+            <div>
+                <img src="./Archivos/IMG/fc26.png"
+                    alt="FC_26">
+            </div>
+        </a>
+        <a href="" class="juegoX3">
+            <div>
+                <img src="./Archivos/IMG/F1_25_logo.png"
+                    alt="F1_25">
+            </div>
+        </a>
+        <a href="" class="juegoX4">
+            <div>
+                <img src="./Archivos/IMG/split-fiction.png"
+                    alt="Split_Fiction">
+            </div>            
+        </a>
+        <a href="" class="juegoX5">
+            <div>
+                <img src="./Archivos/IMG/The-Sims.png"
+                    alt="Los_Sims_4">
+            </div>
+        </a>
+        <a href="" class="juegoX6">
+            <div>
+                <img src="./Archivos/IMG/apex.png"
+                    alt="Apex_legends">
+            </div>
+        </a>
     </section>
 </body>
 <footer>
@@ -116,4 +122,5 @@
         <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
     </section>
 </footer>
+
 </html>
