feat: Update "index.html"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electronic Arts Home Page - Office EA Site</title>
+    <title>Página de inicio Electronic Arts: sitio oficial de EA</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -21,11 +21,11 @@
         <a href="https://www.ea.com/es-es">
             <img src="./Archivos/IMG/logo-2-ea.png" alt="logo-2" class="ea-logo-2">
         </a>
-        <a href="" class="juegos">GAMES</a>
-        <a href="" class="experiencias">EXPERIENCES</a>
-        <a href="" class="acerca_de">ABOUT</a>
-        <a href="" class="compromisos">COMMITMENTS</a>
-        <a href="" class="recursos">RESOURCES</a>
+        <a href="" class="juegos">JUEGOS</a>
+        <a href="" class="experiencias">EXPERIENCIAS</a>
+        <a href="" class="acerca_de">ACERCA DE</a>
+        <a href="" class="compromisos">COMPROMISOS</a>
+        <a href="" class="recursos">RECURSOS</a>
 
     </section>
     <section class="about">
@@ -46,55 +46,6 @@
         <div class="img-info">
             <a href="#"><img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt=""></a>
             <button>Join Now</button>
-        </div>
-    </section>
-    <section class="juegos-destacados">
-        <h3>Featured Games</h3>
-            <div class="juegos-productos">
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/08/bf6-box-art-1x1.jpg.adapt.crop1x1.767p.jpg" alt="battlefield">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/07/fc-26-key-art.jpg.adapt.crop1x1.767p.jpg" alt="FC_26">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/03/f1-25-iconic-gamebox-1x1.jpg.adapt.crop1x1.767p.jpg" alt="F1_25">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2024/12/splitkeyart1x1.jpg.adapt.crop1x1.767p.jpg" alt="Split_Fiction">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2017/01/the-sims-4-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Los_Sims_4">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2019/01/apex-legends-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Apex_legends">
-                    </a>
-                </div>
-            </div>
-    </section>
-    <section class="banner-celeste">
-        <div class="text-banner-celeste">
-            <h1>Players and Parents: Video Game control is in your <br>hands</h1>
-        </div>
-        <button>Learn More</button>
-    </section>
-    <section class="impact-report">
-        <img src="https://media.contentapi.ea.com/content/dam/eacom/commitments/common/commitments-impact-report-2024-50-50-section-16x9.jpg.adapt.1456w.jpg">
-        <div class="info-impact-report">
-            <p>How our incredibly talented, values-driven teams are continuously working to help foster lasting impact to lead the future of entertainment.</p>
-            <button>Learn More</button>
-            <button>Read The Report</button>
         </div>
     </section>
     <h3 class="text2">Featured Games</h3>
@@ -138,15 +89,15 @@
 </body>
 <footer>
     <section class="equipo-ea">
-        <div class="link">
-            <a href="">Careers</a>
-            <a href="">Executives</a>
-            <a href="">Impact Report</a>
-            <a href="">Our Commitments</a>
-            <a href="">Partner With Us</a>
+        <div class="links">
+            <a href="">Equipo</a>
+            <a href="">Equipo ejecutivo</a>
+            <a href="">Informe de impacto</a>
+            <a href="">Nuestros compromisos</a>
+            <a href="">Colabora con EA</a>
         </div>
         <div class="contacto">
-            <h3>Join The Conversation</h3>
+            <h3>Únete a la conversación</h3>
             <a href="https://www.facebook.com/EA/">
                 <img src="./Archivos/IMG/facebook.png" alt="Facebook">
             </a>
@@ -168,50 +119,7 @@
         </div>
     </section>
     <section class="terminos-y-condiciones">
-        <div class="logo-footer">
-            <a href="https://www.ea.com/">
-                <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
-            </a>  
-        </div>
-        <div class="cajon">
-            <div class="links">
-                <div class="links-1">
-                    <a href="">Game Library</a>
-                    <a href="">Subscribe</a>
-                    <a href="">Redeem Code</a>
-                    <a href="">EA app</a>
-                    <a href="">About</a>
-                    <a href="">Accessibility</a>
-                    <a href="">Help</a>
-                    <a href="">Forums</a>
-                </div>
-                <div class="idiomas">
-                    <button>
-                        <div class="lenguaje">Language</div>
-                        <div class="pais">United States</div>
-                    </button>
-                </div>
-            </div>
-            <div class="cajon-2">
-                <div class="cajon-3">
-                    <div class="terminos-legales">
-                        <a href="">Legal & Privacy</a>
-                        <a href="">User Agreement</a>
-                        <a href="">Privacy & Cookie Policy</a>
-                        <a href="">Online Service Updates</a>
-                        <a href="">Security</a>
-                    </div>
-                    <div class="derechos">
-                            &copy;2025 Electronic Arts Inc.
-                    </div>
-                </div>
-                <div class="verificacion">
-                    <a href="https://privacy.truste.com/privacy-seal/validation?rid=f1a11c5d-0232-4077-8498-2e69a38c1335">
-                        <img src="https://privacy-policy.truste.com/privacy-seal/seal?rid=f1a11c5d-0232-4077-8498-2e69a38c1335" alt="Verificacion">
-                    </a>
-                </div>
-            </div>
-        </div>
+        <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
     </section>
 </footer>
 
