--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="" class="juegoX5">
             <div>
                 <img src="./Archivos/IMG/The-Sims.png"
-                    alt="Los_Sims_4">
+                    alt="Los_Sims">
             </div>
         </a>
         <a href="" class="juegoX6">
