--- a/index.html
+++ b/index.html
@@ -47,38 +47,37 @@
     </section>
     <section class="juegos-destacados">
         <h3>Featured Games</h3>
-            <div class="juegos-productos">
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/08/bf6-box-art-1x1.jpg.adapt.crop1x1.767p.jpg" alt="battlefield">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/07/fc-26-key-art.jpg.adapt.crop1x1.767p.jpg" alt="FC_26">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2025/03/f1-25-iconic-gamebox-1x1.jpg.adapt.crop1x1.767p.jpg" alt="F1_25">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2024/12/splitkeyart1x1.jpg.adapt.crop1x1.767p.jpg" alt="Split_Fiction">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2017/01/the-sims-4-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Los_Sims_4">
-                    </a>
-                </div>
-                <div class="juegoX">
-                    <a href="">
-                        <img src="https://media.contentapi.ea.com/content/dam/gin/images/2019/01/apex-legends-keyart.jpg.adapt.crop1x1.767p.jpg" alt="Apex_legends">
-                    </a>
-                </div>
+            </a>
+        <a href="" class="juegoX2">
+            <div>
+                <img src="./Archivos/IMG/fc26.png"
+                    alt="FC_26">
             </div>
+        </a>
+        <a href="" class="juegoX3">
+            <div>
+                <img src="./Archivos/IMG/F1_25_logo.png"
+                    alt="F1_25">
+            </div>
+        </a>
+        <a href="" class="juegoX4">
+            <div>
+                <img src="./Archivos/IMG/split-fiction.png"
+                    alt="Split_Fiction">
+            </div>            
+        </a>
+        <a href="" class="juegoX5">
+            <div>
+                <img src="./Archivos/IMG/The-Sims.png"
+                    alt="Los_Sims">
+            </div>
+        </a>
+        <a href="" class="juegoX6">
+            <div>
+                <img src="./Archivos/IMG/apex.png"
+                    alt="Apex_legends">
+            </div>
+        </a>
     </section>
     <section class="banner-celeste">
         <div class="text-banner-celeste">
