--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
             <button>Join Now</button>
         </div>
     </section>
+    <h3 class="text2">Featured Games</h3>
     <section class="juegos-destacados">
-        <h3>Featured Games</h3>
-            </a>
         <a href="" class="juegoX2">
             <div>
                 <img src="./Archivos/IMG/fc26.png"
