--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
     </section>
     <h3 class="text2">Featured Games</h3>
     <section class="juegos-destacados">
+        <a href="#" class="juegoX1">
+            <div>
+                <img src="./Archivos/IMG/battlefield.png" alt="">
+            </div>
+        </a>
         <a href="" class="juegoX2">
             <div>
                 <img src="./Archivos/IMG/fc26.png"
