--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <section class="nav-ea">
+    <a href="">
         <img src="./Archivos/IMG/icono usuario.png" alt="" class="user">
+    </a>
+    <a href="">
         <img src="./Archivos/IMG/icono interrogacion.png" alt="" class="help">
+    </a>
+    <a href="">
         <img src="./Archivos/IMG/artes-de-la-electronica.png" alt="" class="ea-logo">
+    </a>
     </section>
     <section class="nav-barra">
         <a href="">
@@ -19,11 +25,13 @@
         <a href="https://www.ea.com/es-es">
             <img src="./Archivos/IMG/logo-2-ea.png" alt="logo-2" class="ea-logo-2">
         </a>
-        <a href="" class="juegos">GAMES</a>
-        <a href="" class="experiencias">EXPERIENCES</a>
-        <a href="" class="acerca_de">ABOUT</a>
-        <a href="" class="compromisos">COMMITMENTS</a>
-        <a href="" class="recursos">RESOURCES</a>
+        <div class="nav-color">
+            <a href="" class="juegos">GAMES</a>
+            <a href="" class="experiencias">EXPERIENCES</a>
+            <a href="" class="acerca_de">ABOUT</a>
+            <a href="" class="compromisos">COMMITMENTS</a>
+            <a href="" class="recursos">RESOURCES</a>
+        </div>
 
     </section>
     <section class="about">
