--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 <footer>
     <section class="equipo-ea">
         <div class="link">
-            <a href="">Careers</a>
-            <a href="">Executives</a>
-            <a href="">Impact Report</a>
-            <a href="">Our Commitments</a>
-            <a href="">Partner With Us</a>
+            <a href="https://www.ea.com/careers">Careers</a>
+            <a href="https://www.ea.com/executives">Executives</a>
+            <a href="https://www.ea.com/news/2024-impact-report">Impact Report</a>
+            <a href="https://www.ea.com/commitments">Our Commitments</a>
+            <a href="https://www.ea.com/brand-partnerships">Partner With Us</a>
         </div>
         <div class="contacto">
             <h3>Join The Conversation</h3>
