--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
             <div class="cajon-2">
                 <div class="cajon-3">
                     <div class="terminos-legales">
-                        <a href="">Legal & Privacy</a>
-                        <a href="">User Agreement</a>
-                        <a href="">Privacy & Cookie Policy</a>
-                        <a href="">Online Service Updates</a>
-                        <a href="">Security</a>
+                        <a href="http://www.ea.com/legal">Legal & Privacy</a>
+                        <a href="https://www.ea.com/terms-of-service">User Agreement</a>
+                        <a href="https://www.ea.com/legal/privacy-and-cookie-policy">Privacy & Cookie Policy</a>
+                        <a href="https://www.ea.com/service-updates">Online Service Updates</a>
+                        <a href="https://www.ea.com/security">Security</a>
                     </div>
                     <div class="derechos">
                             &copy;2025 Electronic Arts Inc.
