--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
             <button>Read The Report</button>
         </div>
     </section>
+    <section class="condiciones">
+        <p>*CONDITIONS, LIMITATIONS AND EXCLUSIONS APPLY. SEE <a href="https://www.ea.com/legal/ea-play-terms">EA PLAY TERMS</a> FOR DETAILS.</p>
+        <hr>
+    </section>
 </body>
 <footer>
     <section class="equipo-ea">
