--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
             </div>
         </a>
     </section>
+    <section class="noticias">
+        <h3>Latest Updates</h3>
+        <div>
+
+        </div>
+    </section>
     <section class="banner-celeste">
         <div class="text-banner-celeste">
             <h1>Players and Parents: Video Game control is in your <br>hands</h1>
