--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
             </div>
         </a>
     </section>
+    <section class="latest-games">
+        <button>Latest Games</button>
+    </section>
+
+    <section class="ea-play">
+        <div class="ea-play-text">
+            <img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt="">
+            <h3>Unlock a world of thrill</h3>
+            <p>Experience unlimited access to a collection of top EA titles, trials of select new games and more.</p>
+            <button>Join Now</button>
+        </div>
+    </section>
+
     <section class="banner-celeste">
         <div class="text-banner-celeste">
             <h1>Players and Parents: Video Game control is in your <br>hands</h1>
