--- a/index.html
+++ b/index.html
@@ -95,6 +95,45 @@
         <button>Latest Games</button>
     </section>
 
+    <h1>Latest Updates</h1>
+    <section class="latest-updates">
+        <a href="">
+            <div class="card1">
+                <img src="./Archivos/IMG/card1.jpg" alt="">
+            </div>
+        </a>
+        <a href="">
+            <div class="card1">
+                <img src="./Archivos/IMG/card1.jpg" alt="">
+            </div>
+        </a>
+        <a href="">
+            <div class="card2">
+                <img src="./Archivos/IMG/card2.jpg" alt="">
+            </div>
+        </a>
+        <a href="">
+            <div class="card3">
+                    <img src="./Archivos/IMG/card3.jpg" alt="">
+            </div>
+        </a>
+        <a href="">
+            <div class="card4">
+                <img src="./Archivos/IMG/card4.png" alt="">
+            </div>
+        </a>
+        <a href="">
+            <div class="card5">
+                <img src="./Archivos/IMG/card5.jpg" alt="">
+            </div>
+        </a>
+        <a href="">
+            <div class="card6">
+                <img src="./Archivos/IMG/card6.png" alt="">
+            </div>
+        </a>
+    </section>
+
     <section class="ea-play">
         <div class="ea-play-text">
             <img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt="">
