--- a/index.html
+++ b/index.html
@@ -95,41 +95,96 @@
         <button>Latest Games</button>
     </section>
 
-    <h1>Latest Updates</h1>
+    <h1 class="latest-text">Latest Updates</h1>
     <section class="latest-updates">
-        <a href="">
-            <div class="card1">
+        <a href="" class="card1">
+            <div>
                 <img src="./Archivos/IMG/card1.jpg" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
             </div>
         </a>
-        <a href="">
-            <div class="card1">
-                <img src="./Archivos/IMG/card1.jpg" alt="">
-            </div>
-        </a>
-        <a href="">
-            <div class="card2">
+        <a href="" class="card2">
+            <div>
                 <img src="./Archivos/IMG/card2.jpg" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
             </div>
         </a>
-        <a href="">
-            <div class="card3">
-                    <img src="./Archivos/IMG/card3.jpg" alt="">
+        <a href="" class="card3">
+            <div>
+                <img src="./Archivos/IMG/card3.jpg" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
             </div>
         </a>
-        <a href="">
-            <div class="card4">
+        <a href="" class="card4">
+            <div>
                 <img src="./Archivos/IMG/card4.png" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
             </div>
         </a>
-        <a href="">
-            <div class="card5">
-                <img src="./Archivos/IMG/card5.jpg" alt="">
+        <a href="" class="card5">
+            <div>
+                <img src="./Archivos/IMG/card3.jpg" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
             </div>
         </a>
-        <a href="">
-            <div class="card6">
+        <a href="" class="card6">
+            <div>
                 <img src="./Archivos/IMG/card6.png" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
             </div>
         </a>
     </section>
