--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
     <section class="about">
         <div class="text">
             <h1>PRE-ORDER EA SPORTS FC™ 26 ULTIMATE EDITION</h1>
-
+            <div class="video-background">
+                <video autoplay muted loop>
+                    <source src="tu-video.mp4" type="video/mp4" />
+                    Tu navegador no soporta videos de fondo.
+                </video>
+            </div>
             <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
 
             <button>Pre-Order-Nows</button>
