--- a/indexcompra.html
+++ b/indexcompra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electronic Arts Buy Page - Office EA Site</title>
+    <title>Electronic Arts Buy Page</title>
 </head>
 <body>
     
