--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
 
-            <button src="/Archivos/.indexcompra.html">Pre-Order-Nows</button>
+            <button href="/Archivos/.indexcompra.html">Pre-Order-Nows</button>
         </div>
     </section>
     <section class="info_1">
