--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
     <section class="about">
         <div class="text">
             <h1>PRE-ORDER EA SPORTS FC™ 26 ULTIMATE EDITION</h1>
-
+            <div class="video-background">
+                <video autoplay muted loop>
+                    <source src="/Archivos/VID/Battle.mp4" type="video/mp4" />
+                    Tu navegador no soporta videos de fondo.
+                </video>
+            </div>
             <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
 
-            <button>Pre-Order-Nows</button>
+            <button>BUY NOW</button>
+            <button>WATCH TRAILER</button>
         </div>
     </section>
-    <section class="info_1">
+   <!-- <section class="info_1">
         <div class="text-info">
             <h2>Try NHL 26 for 10 hours with EA Play.</h2>
         </div>
@@ -52,7 +58,7 @@
             <a href="#"><img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt=""></a>
             <button>Join Now</button>
         </div>
-    </section>
+    </section> -->
     <h3 class="text2">Featured Games</h3>
     <section class="juegos-destacados">
         <a href="#" class="juegoX1">
