--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
                 </video>
             </div>
             <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
-
-            <button>BUY NOW</button>
+            <a href="indexcompra.html">
+                <button>BUY NOW</button>
+            </a>
             <button>WATCH TRAILER</button>
         </div>
     </section>
