--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>PRE-ORDER EA SPORTS FC™ 26 ULTIMATE EDITION</h1>
             <div class="video-background">
                 <video autoplay muted loop>
-                    <source src="/Archivos/VID/Battle.mp4" type="video/mp4" />
+                    <source src="./Archivos/VID/Battle.mp4" type="video/mp4" />
                     Tu navegador no soporta videos de fondo.
                 </video>
             </div>
