nuevos index - hpta Julian

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </video>
             </div>
             <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
-            <a href="indexcompra.html">
+            <a href="indexcarousel.html">
                 <button>BUY NOW</button>
             </a>
             <button>WATCH TRAILER</button>
