--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
     </section>
     <section class="about">
         <div class="text">
-            <h1>PRE-ORDER EA SPORTS FC™ 26 ULTIMATE EDITION</h1>
+            <img src="https://media.contentapi.ea.com/content/dam/battlefield/common/logos/battlefield-6-logo.svg" alt="">
             <div class="video-background">
                 <video autoplay muted loop>
                     <source src="./Archivos/VID/Battle.mp4" type="video/mp4" />
-                    Tu navegador no soporta videos de fondo.
                 </video>
             </div>
-            <p>The Club is Yours up to 7 days early, get FC Points and more when you pre-order EA SPORTS FC™ 26 Ultimate Edition today</p>
+            <p>The wait is over. Experience all-out warfare today.</p>
             <a href="indexcarousel.html">
                 <button>BUY NOW</button>
             </a>
