--- a/indexcarousel.html
+++ b/indexcarousel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electronic Arts Buy Page</title>
+    <title>Electronic Arts Carousel Page</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -16,7 +16,7 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="carousel">
     <section class="nav-ea">
         <a href="" class="Banner_compra">Electronis arts</a>
         <button class="btnuser">
@@ -74,5 +74,9 @@
         </button>
     </div>
 </body>
+
+<footer class="foot-carousel">
+    <a>A</a>
+</footer>
 
 </html>
