--- a/indexcarousel.html
+++ b/indexcarousel.html
@@ -20,8 +20,8 @@
     <section class="nav-ea">
         <a href="" class="Banner_compra">Electronis arts</a>
         <button class="btnuser">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-person" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person"
+                viewBox="0 0 16 16">
                 <path
                     d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
             </svg>
@@ -76,7 +76,25 @@
 </body>
 
 <footer class="foot-carousel">
-    <a>A</a>
+    <div class="footer-carousel-top">
+        <ul class="footer-carousel-links">
+            <li><a href="#">Ayuda</a></li>
+            <li><a href="#">Información legal y privacidad</a></li>
+            <li><a href="#">Responsabilidad social corporativa</a></li>
+            <li><a href="#">Actualizaciones del servicio online</a></li>
+        </ul>
+    </div>
+
+    <div class="footer-carousel-mid">
+        <p>
+            Los productos digitales vendidos en determinados territorios incluirán el IVA o el GST,
+            según corresponda. Consulta las Condiciones de venta para más detalles.
+        </p>
+    </div>
+
+    <div class="footer-carousel-bottom">
+        <p>© 2025 ELECTRONIC ARTS INC.</p>
+    </div>
 </footer>
 
 </html>
