--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     <source src="./Archivos/VID/Battle.mp4" type="video/mp4" />
                 </video>
             </div>
-            <p>The wait is over. Experience all-out warfare today.</p>
+            <p><b>The wait is over. Experience all-out warfare today.</b></p>
             <a href="indexcarousel.html">
-                <button>BUY NOW</button>
+                <button class="comprar">BUY NOW</button>
             </a>
-            <button>WATCH TRAILER</button>
+            <button class="trailer">WATCH TRAILER</button>
         </div>
     </section>
    <!-- <section class="info_1">
@@ -211,7 +211,7 @@
         <button>Learn More</button>
     </section>
     <section class="impact-report">
-        <img src="https://media.contentapi.ea.com/content/dam/eacom/commitments/common/commitments-impact-report-2024-50-50-section-16x9.jpg.adapt.1456w.jpg">
+        <img src="https://media.contentapi.ea.com/content/dam/eacom/commitments/common/ea-impact-report-2025-cover-16x9.png.adapt.1920w.png">
         <div class="info-impact-report">
             <p>How our incredibly talented, values-driven teams are continuously working to help foster lasting impact to lead the future of entertainment.</p>
             <button>Learn More</button>
